--- a/app.json
+++ b/app.json
@@ -10,15 +10,12 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.pratikdeshmukh.autoexpense"
+      "bundleIdentifier": "com.pratikdeshmukh.autoexpense",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
-      "adaptiveIcon": {
-        "backgroundColor": "#EA2831",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
-      },
       "package": "com.pratikdeshmukh.autoexpense",
       "versionCode": 1,
       "permissions": [
@@ -32,7 +29,7 @@
     },
     "web": {
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/logo.png"
     },
     "plugins": [
       "expo-router",
@@ -49,8 +46,7 @@
         }
       ],
       "expo-secure-store",
-      "expo-local-authentication",
-      "expo-notifications"
+      "expo-local-authentication"
     ],
     "experiments": {
       "typedRoutes": true,
