build issue fix for installing

--- a/eas.json
+++ b/eas.json
@@ -9,8 +9,7 @@
     },
     "debug": {
       "android": {
-        "buildType": "apk",
-        "gradleCommand": ":app:assembleDebug"
+        "buildType": "apk"
       }
     },
     "simulator": {
