Google Login and Guest Login

--- a/app.json
+++ b/app.json
@@ -23,7 +23,8 @@
         "android.permission.USE_FINGERPRINT"
       ],
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "output": "static",
