--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
     "build:ios": "eas build --platform ios",
     "build:ios:preview": "eas build --platform ios --profile preview",
     "build:ios:production": "eas build --platform ios --profile production",
-    "build:ios:development": "eas build --platform ios --profile development"
+    "build:ios:development": "eas build --platform ios --profile development",
+    "build:android:local": "cd android && ./gradlew assembleRelease && cd ..",
+    "apk": "npx expo prebuild --clean --platform android && cd android && ./gradlew assembleRelease && cd ..",
+    "build:ios:local": "npx expo run:ios --configuration Release",
+    "prebuild": "npx expo prebuild",
+    "prebuild:clean": "npx expo prebuild --clean",
+    "sha1": "./get-sha1.sh"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
