--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build:ios:development": "eas build --platform ios --profile development",
     "build:android:local": "cd android && ./gradlew assembleRelease && cd ..",
     "apk": "npx expo prebuild --clean --platform android && cd android && ./gradlew assembleRelease && cd ..",
+    "apk:custom": "./build-apk.sh",
     "build:ios:local": "npx expo run:ios --configuration Release",
     "prebuild": "npx expo prebuild",
     "prebuild:clean": "npx expo prebuild --clean",
