feat(modals): create index file to export modal components
feat(package): add custom IPA build script to package.json

feat(scripts): implement build-apk.sh for APK building with progress indication and installation option

feat(scripts): add build-ipa.sh for IPA building with installation option on simulator

feat(scripts): create get-sha1.sh to retrieve debug keystore SHA-1

refactor(scripts): remove reset-project.js as it is no longer needed

refactor(AuthService): remove console error logging for Google Sign-In errors

refactor(CategoryService): remove console error logging for category operations

refactor(GmailService): remove console logging for various operations to clean up output

refactor(GoogleSheetsService): remove console error logging for sheet operations

refactor(PaymentMethodService): remove console error logging for payment method operations

refactor(TransactionService): remove console error logging for transaction operations

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build:android:local": "cd android && ./gradlew assembleRelease && cd ..",
     "apk": "npx expo prebuild --clean --platform android && cd android && ./gradlew assembleRelease && cd ..",
     "apk:custom": "./build-apk.sh",
+    "ipa:custom": "./build-ipa.sh",
     "build:ios:local": "npx expo run:ios --configuration Release",
     "prebuild": "npx expo prebuild",
     "prebuild:clean": "npx expo prebuild --clean",
